// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render a NavigationSideMenu with a toolbar 1`] = `
<ContentContainer
  className="side-menu-content-container"
  fill={true}
  header={
    <React.Fragment>
      <ActionHeader
        className="side-menu-action-header"
        data-navigation-side-menu-action-header={true}
        level={1}
        onBack={[MockFunction]}
        title={null}
      />
      <div>
        Toolbar
      </div>
    </React.Fragment>
  }
/>
`;

exports[`Layout should render a NavigationSideMenu with default props 1`] = `
<ContentContainer
  className="side-menu-content-container"
  fill={true}
  header={
    <React.Fragment>
      <ActionHeader
        className="side-menu-action-header"
        data-navigation-side-menu-action-header={true}
        level={1}
        onBack={[Function]}
        title={null}
      />
    </React.Fragment>
  }
/>
`;

exports[`Layout should render a NavigationSideMenu with selectedKey 1`] = `
<ContentContainer
  className="side-menu-content-container"
  fill={true}
  header={
    <React.Fragment>
      <ActionHeader
        className="side-menu-action-header"
        data-navigation-side-menu-action-header={true}
        level={1}
        onBack={[Function]}
        title="Test Menu"
      />
    </React.Fragment>
  }
>
  <List
    className="side-menu-list"
    isDivided={false}
  >
    <MenuItem
      data-menu-item="test1"
      isSelected={false}
      key="test1"
      onClick={[Function]}
      onKeyDown={[Function]}
      text="Test Menu 1"
    />
    <MenuItem
      data-menu-item="test2"
      isSelected={false}
      key="test2"
      onClick={[Function]}
      onKeyDown={[Function]}
      text="Test Menu 2"
    />
    <MenuItem
      data-menu-item="test3"
      isSelected={false}
      key="test3"
      onClick={[Function]}
      onKeyDown={[Function]}
      text="Test Menu 3"
    />
    <MenuItem
      data-menu-item="test4"
      isSelected={false}
      key="test4"
      onClick={[Function]}
      onKeyDown={[Function]}
      text="Test Menu 4"
    />
  </List>
</ContentContainer>
`;
